--- a/Site/i18n/zh-Hans/docusaurus-plugin-content-docs/current/api/Class Object/Joint.mdx
+++ b/Site/i18n/zh-Hans/docusaurus-plugin-content-docs/current/api/Class Object/Joint.mdx
@@ -258,8 +258,8 @@ pulley: function(self: JointClass,
 | canCollide | boolean | 连接的物体是否会相互碰撞。 |
 | bodyA | Body | 要连接的第一个物理体。 |
 | bodyB | Body | 要连接的第二个物理体。 |
-| anchorA | Vec2 | 第一个物体上的锚点在世界坐标系中的位置。 |
-| anchorB | Vec2 | 第二个物体上的锚点在世界坐标系中的位置。 |
+| anchorA | Vec2 | 第一个物体上的锚点的位置。 |
+| anchorB | Vec2 | 第二个物体上的锚点的位置。 |
 | groundAnchorA | Vec2 | 第一个物体上的地面锚点在世界坐标系中的位置。 |
 | groundAnchorB | Vec2 | 第二个物体上的地面锚点在世界坐标系中的位置。 |
 | ratio | number | [可选] 滑轮比率（默认值为1.0）。 |
@@ -336,8 +336,8 @@ rope: function(self: JointClass,
 | canCollide | boolean | 连接的物体是否会相互碰撞。 |
 | bodyA | Body | 要连接的第一个物理体。 |
 | bodyB | Body | 要连接的第二个物理体。 |
-| anchorA | Vec2 | 第一个物体上的锚点在世界坐标系中的位置。 |
-| anchorB | Vec2 | 第二个物体上的锚点在世界坐标系中的位置。 |
+| anchorA | Vec2 | 第一个物体上的锚点的位置。 |
+| anchorB | Vec2 | 第二个物体上的锚点的位置。 |
 | maxLength | number | [可选] 锚点之间的最大距离（默认为0.0）。 |
 
 **返回值：**
