--- a/Site/docs/api/Class Object/JointDef.mdx
+++ b/Site/docs/api/Class Object/JointDef.mdx
@@ -222,8 +222,8 @@ pulley: function(self: JointDefClass,
 | canCollide | boolean | Whether or not the connected bodies will collide with each other. |
 | bodyA | Body | The name of first physics body to connect. |
 | bodyB | Body | The name of second physics body to connect. |
-| anchorA | Vec2 | The position of the anchor point on the first body in world coordinates. |
-| anchorB | Vec2 | The position of the anchor point on the second body in world coordinates. |
+| anchorA | Vec2 | The position of the anchor point on the first body. |
+| anchorB | Vec2 | The position of the anchor point on the second body. |
 | groundAnchorA | Vec2 | The position of the ground anchor point on the first body in world coordinates. |
 | groundAnchorB | Vec2 | The position of the ground anchor point on the second body in world coordinates. |
 | ratio | number | [optinal] The pulley ratio (default 1.0). |
@@ -300,8 +300,8 @@ rope: function(self: JointDefClass,
 | canCollide | boolean | Whether or not the connected bodies will collide with each other. |
 | bodyA | Body | The name of first physics body to connect. |
 | bodyB | Body | The name of second physics body to connect. |
-| anchorA | Vec2 | The position of the anchor point on the first body in world coordinates. |
-| anchorB | Vec2 | The position of the anchor point on the second body in world coordinates. |
+| anchorA | Vec2 | The position of the anchor point on the first body. |
+| anchorB | Vec2 | The position of the anchor point on the second body. |
 | maxLength | number | [optinal] The maximum distance between the anchor points (default 0.0). |
 
 **Returns:**
