--- a/Site/i18n/zh-Hans/docusaurus-plugin-content-docs/current/api/Class Object/JointDef.mdx
+++ b/Site/i18n/zh-Hans/docusaurus-plugin-content-docs/current/api/Class Object/JointDef.mdx
@@ -222,8 +222,8 @@ pulley: function(self: JointDefClass,
 | canCollide | boolean | 连接的物理体是否应该彼此碰撞。 |
 | bodyA | Body | 要连接的第一个物理体的名称。 |
 | bodyB | Body | 要连接的第二个物理体的名称。 |
-| anchorA | Vec2 | 第一个物理体上的固定点的位置，以世界坐标表示。 |
-| anchorB | Vec2 | 第二个物理体上的固定点的位置，以世界坐标表示。 |
+| anchorA | Vec2 | 第一个物理体上的固定点的位置。 |
+| anchorB | Vec2 | 第二个物理体上的固定点的位置。 |
 | groundAnchorA | Vec2 | 第一个物理体上的地面固定点的位置，以世界坐标表示。 |
 | groundAnchorB | Vec2 | 第二个物理体上的地面固定点的位置，以世界坐标表示。 |
 | ratio | number | [可选] 滑轮比率（默认为 1.0）。 |
@@ -300,8 +300,8 @@ rope: function(self: JointDefClass,
 | canCollide | boolean | 连接的物理体是否会相互碰撞。 |
 | bodyA | Body | 要连接的第一个物理体的名称。 |
 | bodyB | Body | 要连接的第二个物理体的名称。 |
-| anchorA | Vec2 | 第一个物理体上锚点的位置（世界坐标系）。 |
-| anchorB | Vec2 | 第二个物理体上锚点的位置（世界坐标系）。 |
+| anchorA | Vec2 | 第一个物理体上锚点的位置。 |
+| anchorB | Vec2 | 第二个物理体上锚点的位置。 |
 | maxLength | number | [可选] 锚点之间的最大距离（默认为0.0）。 |
 
 **返回值：**
