--- a/Site/i18n/zh-Hans/docusaurus-plugin-content-docs/current/api/Class/Body.mdx
+++ b/Site/i18n/zh-Hans/docusaurus-plugin-content-docs/current/api/Class/Body.mdx
@@ -337,3 +337,23 @@ attachSensor: function(self: Body, tag: integer, fixtureDef: FixtureDef): Sensor
 | 返回类型 | 描述 |
 | --- | --- |
 | Sensor | 新建的传感器。 |
+
+## onContactFilter
+
+**类型：** 函数。
+
+**描述：**
+
+&emsp;&emsp;注册一个函数，该函数在物理体与其他物理体发生碰撞时被调用。
+当注册的函数返回false时，物理体将不会触发本次的碰撞事件。
+
+**签名：**
+```tl
+onContactFilter: function(self: Body, filter: function(other: Body): boolean)
+```
+
+**参数：**
+
+| 参数名 | 类型 | 描述 |
+| --- | --- | --- |
+| filter | function | 碰撞过滤器函数。 |
