--- a/Site/i18n/zh-Hans/docusaurus-plugin-content-docs/current/api/Class/Cache.mdx
+++ b/Site/i18n/zh-Hans/docusaurus-plugin-content-docs/current/api/Class/Cache.mdx
@@ -90,7 +90,7 @@ load: function(self: Cache, filename: string): boolean
 
 **签名：**
 ```tl
-loadAsync: function(self: Cache, filename: string): boolean
+loadAsync: function(self: Cache, filename: string | {string}, handler?: function(progress: number))
 ```
 
 **用法示例：**
@@ -107,13 +107,8 @@ end)
 
 | 参数名 | 类型 | 描述 |
 | --- | --- | --- |
-| filename | string | 要加载的资源文件的名称。 |
-
-**返回值：**
-
-| 返回类型 | 描述 |
-| --- | --- |
-| boolean | 如果资源文件成功加载，则返回 true，否则返回 false。 |
+| filename | string | \{string} | 要加载的资源文件的名称。 |
+| handler | function | [可选] 加载进度回调函数。progress 参数是一个介于0和1之间的数字，表示加载进度的百分比。 |
 
 ## update
 
